--- a/Rasterizer/Rasterizer.vcxproj
+++ b/Rasterizer/Rasterizer.vcxproj
@@ -165,19 +165,21 @@ xcopy "$(ProjectDir)Resources\" "$(OutDir)\Resources\" /y /D</Command>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\OpaqueShader.h" />
+    <ClInclude Include="src\LitShader.h" />
     <ClInclude Include="src\ReferenceScene.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Scene.h" />
     <ClInclude Include="src\ShadableObject.h" />
     <ClInclude Include="src\Shader.h" />
+    <ClInclude Include="src\UnlitShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\OpaqueShader.cpp" />
+    <ClCompile Include="src\LitShader.cpp" />
     <ClCompile Include="src\ReferenceScene.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\UnlitShader.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
